@@ -44,10 +44,24 @@ class TestTypes(fixtures.TestBase, AssertsExecutionResults):
         finally:
             meta.drop_all()
 
-    def test_string_dates_raise(self):
+    def test_string_dates_passed_raise(self):
         assert_raises(exc.StatementError, testing.db.execute,
                       select([1]).where(bindparam('date', type_=Date)),
                       date=str(datetime.date(2007, 10, 30)))
+
+    def test_cant_parse_datetime_message(self):
+        for (typ, disp) in [
+            (Time, "time"),
+            (DateTime, "datetime"),
+            (Date, "date")
+        ]:
+            assert_raises_message(
+                ValueError,
+                "Couldn't parse %s string." % disp,
+                lambda: testing.db.execute(
+                    text("select 'ASDF' as value", typemap={"value":typ})
+                ).scalar()
+            )
 
     def test_time_microseconds(self):
         dt = datetime.datetime(2008, 6, 27, 12, 0, 0, 125, )
