@@ -15,6 +15,12 @@ CHANGES
      when the Session.is_active is True.
      [ticket:2241]
 
+- sqlite
+  - Ensured that the same ValueError is raised for
+    illegal date/time/datetime string parsed from
+    the database regardless of whether C 
+    extensions are in use or not.
+
 0.7.2
 =====
 - orm
